--- a/Web/A2v10.Web.Site/Less/Variables.less
+++ b/Web/A2v10.Web.Site/Less/Variables.less
@@ -141,6 +141,7 @@
 @toastr-z-index:1080;
 @wc-z-index:1090;
 @sticky-index: 7;
+@toolbar-z-index: 8;
 
 
 @danger-txt-color: #a94442;
